--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="body">
   <header>
-    <app-header></app-header> - 223
+    <app-header></app-header>
   </header>
   <div class="main-content">
     <app-loader></app-loader>
